--- a/app/templates/achievements/list.html
+++ b/app/templates/achievements/list.html
@@ -1,28 +1,40 @@
 {% extends "admin_base.html" %}
 
 {% block content %}
-    <h1>achievements List</h1>
+    <h1>Achievements List</h1>
     <div class="row">
+        <div class="col-lg-12">
+            <div class="dropdown">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                    Actions
+                </button>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item {% if not current_user.can_do("achievements", "add") %}disabled{% endif %}" href="{{ url_for('achievements.add_achievements') }}">Add</a>
+                </div>
+              </div> 
+        </div>
         {% for achievement in achievements %}
-        <div class="col-lg-4">
+        <div class="col-lg-4" style="margin-top:20px;">
             <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                     <h6 class="m-0 font-weight-bold text-primary">{{ achievement.title }}</h6>
+                    {% if current_user.can_do("achievements", "edit") or current_user.can_do("achievements", "delete") %}
                     <div class="dropdown no-arrow">
                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink" style="">
                             <div class="dropdown-header">Actions:</div>
-                            <a class="dropdown-item" href="{{ url_for('achievements.edit_achievement', achievement_id=achievement.id) }}">Edit</a>
-                            <a class="dropdown-item" href="{{ url_for('achievements.delete_achievement', achievement_id=achievement.id) }}">Delete</a>
+                            {% if current_user.can_do("achievements", "edit") %}<a class="dropdown-item" href="{{ url_for('achievements.edit_achievement', achievement_id=achievement.id) }}">Edit</a>{% endif %}
+                            {% if current_user.can_do("achievements", "delete") %}<a class="dropdown-item" href="{{ url_for('achievements.delete_achievement', achievement_id=achievement.id) }}">Delete</a>{% endif %}
                         </div>
                     </div>
+                    {% endif %}
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                    {{ achievement.body |safe}}
+                    {{ remove_html_tags(achievement.body)[:101] }}
                 </div>
             </div>
         </div>
