--- a/app/templates/achievements/list.html
+++ b/app/templates/achievements/list.html
@@ -10,9 +10,11 @@
                 </button>
                 <div class="dropdown-menu">
                     <a class="dropdown-item {% if not current_user.can_do("achievements", "add") %}disabled{% endif %}" href="{{ url_for('achievements.add_achievements') }}">Add</a>
+                    <a class="dropdown-item disabled" href="#">Import</a>
                 </div>
               </div> 
         </div>
+
         {% for achievement in achievements %}
         <div class="col-lg-4" style="margin-top:20px;">
             <div class="card shadow mb-4">
