--- a/app/templates/announcements/list.html
+++ b/app/templates/announcements/list.html
@@ -3,22 +3,35 @@
 {% block content %}
     <h1>Announcements List</h1>
     <div class="row">
+        <div class="col-lg-12">
+            <div class="dropdown">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                    Actions
+                </button>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item {% if not current_user.can_do("announcements", "add") %}disabled{% endif %}" href="{{ url_for('announcements.add_announcements') }}">Add</a>
+                    <a class="dropdown-item disabled" href="#">Import</a>
+                </div>
+              </div> 
+        </div>
         {% for announcement in announcements %}
-        <div class="col-lg-4">
+        <div class="col-lg-4" style="margin-top:20px;">
             <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                     <h6 class="m-0 font-weight-bold text-primary">{{ announcement.title }}</h6>
+                    {% if current_user.can_do("announcements", "edit") or current_user.can_do("announcements", "delete") %}
                     <div class="dropdown no-arrow">
                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink" style="">
                             <div class="dropdown-header">Actions:</div>
-                            <a class="dropdown-item" href="{{ url_for('announcements.edit_announcement', announcement_id=announcement.id) }}">Edit</a>
-                            <a class="dropdown-item" href="{{ url_for('announcements.delete_announcement', announcement_id=announcement.id) }}">Delete</a>
+                            {% if current_user.can_do("announcements", "edit") %}<a class="dropdown-item" href="{{ url_for('announcements.edit_announcement', announcement_id=announcement.id) }}">Edit</a>{% endif %}
+                            {% if current_user.can_do("announcements", "delete") %}<a class="dropdown-item" href="{{ url_for('announcements.delete_announcement', announcement_id=announcement.id) }}">Delete</a>{% endif %}
                         </div>
                     </div>
+                    {% endif %}
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
