Add import export feature

--- a/app/templates/admin_base.html
+++ b/app/templates/admin_base.html
@@ -310,6 +310,26 @@
         </div>
     </div>
 
+    <!-- Logout Modal-->
+    <div class="modal fade" id="clientDownloadModal" tabindex="-1" role="dialog" aria-labelledby="clientDownloadModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="clientDownloadModalLabel">Download Client</h5>
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">Once the client downloads, Run it. If smartscreen comes, click on More info --&gt; Run anyway</div>
+                <div class="modal-footer">
+                    <a class="btn btn-secondary" href="https://github.com/amsdc/darvisclient/releases/download/v0.1.0/darvisclient.exe">Didn't download? Try again.</a>
+                    <button class="btn btn-primary" type="button" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- apps Modal-->
     <div class="modal fade" id="appsModal" tabindex="-1" role="dialog" aria-labelledby="appsModalLabel"
     aria-hidden="true">
