--- a/app/templates/achievements/list.html
+++ b/app/templates/achievements/list.html
@@ -10,7 +10,8 @@
                 </button>
                 <div class="dropdown-menu">
                     <a class="dropdown-item {% if not current_user.can_do("achievements", "add") %}disabled{% endif %}" href="{{ url_for('achievements.add_achievements') }}">Add</a>
-                    <a class="dropdown-item disabled" href="#">Import</a>
+                    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#clientDownloadModal" onclick="window.open('https://github.com/amsdc/darvisclient/releases/latest/download/darvisclient.exe', '_blank');">Import</a>
+                    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#clientDownloadModal" onclick="window.open('https://github.com/amsdc/darvisclient/releases/latest/download/darvisclient.exe', '_blank');">Export</a>
                 </div>
               </div> 
         </div>
