--- a/app/templates/auth/requestpwdreset.html
+++ b/app/templates/auth/requestpwdreset.html
@@ -1,34 +1,50 @@
-{% from 'bootstrap/form.html' import render_form %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {{ bootstrap.load_css() }}
-    <title>Password Reset</title>
-</head>
-<body>
+{% extends "auth/base.html" %}
+
+{% block title %}Reset Password{% endblock %}
+
+<!-- This snippet uses Font Awesome 5 Free as a dependency. You can download it at fontawesome.io! -->
+
+{% block content %}
     <div class="container">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-        {% for category, message in messages %}
-            {% if category == "message" %}
-                {% set category = "success" %}
-            {% endif %}
-            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                <strong>{{ message }}</strong>
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+        <div class="row">
+            <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+                <div class="card border-0 shadow rounded-3 my-5">
+                    <div class="card-body p-4 p-sm-5">
+                        <h5 class="card-title text-center mb-5 fw-light display-3">
+                            Reset Password
+                        </h5>
+                        {% with messages = get_flashed_messages() %}
+                            {% if messages %}
+                            {% for message in messages %}
+                            <div class="alert alert-danger" role="alert">
+                                {{ message }}
+                            </div>
+                            {% endfor %}
+                            {% endif %}
+                        {% endwith %}
+                        <p>Forgot your password? No problem, get it reset here:</p>
+                        <form action="" method="post">
+                            {{ form.hidden_tag() }}
+                            <div class="form-floating mb-3">
+                                {{ form.email(id="email", class="form-control") }}
+                                <label for="email">{{ form.email.label }}</label>
+                                {% for error in form.email.errors %}
+                                <br>
+                                <span class="alert alert-danger" role="alert">{{ error }}</span>
+                                {% endfor %}
+                            </div>
+
+                            {{ xcaptcha }}
+                            <div class="d-grid">
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    {{ form.submit(class="btn btn-primary btn-login text-uppercase fw-bold") }}
+                                </div>
+                            </div>
+                        </form>
+                        
+                    </div>
+                </div>
             </div>
-        {% endfor %}
-        {% endif %}
-        {% endwith %}
-        <h1>Password Reset</h1>
-        {{ render_form(form) }}
-		{{ xcaptcha }}
+        </div>
     </div>
-    {{ bootstrap.load_js() }}
-</body>
-</html>
+{% endblock %}
