Update incorrect text

--- a/app/templates/auth/emails/rpr.html
+++ b/app/templates/auth/emails/rpr.html
@@ -11,7 +11,7 @@
     <p>
       To reset your password click on the following link: <br>
         <br>
-        <a href="{{ url_for('auth.reset_password', token=token, _external=True, _scheme='https') }}">Create an account</a> <br>
+        <a href="{{ url_for('auth.reset_password', token=token, _external=True, _scheme='https') }}">Reset Password</a> <br>
         <br>
         Alternatively, copy and paste this link in the address bar: <br>
 
@@ -23,7 +23,7 @@
     <p>
         Sincerely,
         <br>
-        D.A.R.V.I.S. Team
+        Advaith Menon
     </p>
 </body>
 </html>
