--- a/app/templates/user_management/roles/add.html
+++ b/app/templates/user_management/roles/add.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     <h1>Add Role</h1>
-    <div class="alert alert-warning">
+    {# <div class="alert alert-warning">
         <b>Heads Up:</b> You can't delete roles right now.
-    </div>
+    </div> #}
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
