--- a/app/templates/achievements/delete.html
+++ b/app/templates/achievements/delete.html
@@ -7,7 +7,7 @@
     </div>
     {% endif %}
 
-    <h1>Delete Announcement</h1>
+    <h1>Delete Achievement</h1>
     <div class="alert alert-danger" role="alert">
         <b>WARNING:</b> Deleted achievements are deleted forever. You can't undo it.
     </div>
