--- a/app/templates/achievements/edit.html
+++ b/app/templates/achievements/edit.html
@@ -7,10 +7,10 @@
     </div>
     {% endif %}
 
-    {% if ann_name %}
-    <h1>Edit Announcement - {{ ann_name }}</h1>
+    {% if ach_name %}
+    <h1>Edit Achievement - {{ ach_name }}</h1>
     {% else %}
-    <h1>Add Announcement</h1>
+    <h1>Add Achievement</h1>
     {% endif %}
     <form action="" method="post">
         {{ form.hidden_tag() }}
